gerar interface, implementação e controller

--- a/src/CodeGenerator.Lib.Activator/settings.json
+++ b/src/CodeGenerator.Lib.Activator/settings.json
@@ -1,2 +1,18 @@
 {
+  "InterfaceParameters": {
+    "Path": "",
+    "NamespaceName": "",
+    "EntityName": ""
+  },
+  "ImplementationParameters": {
+    "Path": "",
+    "NamespaceName": "",
+    "ContextName": "",
+    "EntityName": ""
+  },
+  "ControllerParameters": {
+    "Path": "",
+    "NamespaceName": "",
+    "EntityName": ""
+  }
 }
